[package]
name = "rust-openbmclapi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
async-trait = "0.1.81"
clap = { version = "4.5.9", features = ["derive"] }
const_format = "0.2.32"
hex = "0.4.3"
reqwest = { git = "https://github.com/thomasqueirozb/reqwest", branch = "base_url", features = [
  "json",
] }
reqwest_dav = "0.1.12"
ring = "0.17.8"
salvo = "0.68.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["macros"] }
toml = "0.8.14"
tracing = "0.1"
tracing-subscriber = "0.3"
